<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddStockFragment"
    >

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/my_shape">



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="1dp"
                android:background="@drawable/custom_edittext">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:padding="24dp">

                    <TextView
                        android:id="@+id/loginText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addStock_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/purple"
                        android:layout_marginLeft="100dp"
                        />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtLayItemName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        app:boxBackgroundMode="none">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtItemName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/custom_edittext"
                            android:paddingTop="12dp"
                            android:hint="@string/item_name"
                            />

                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtLayQty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        app:boxBackgroundMode="none">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtQty"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/custom_edittext"
                            android:paddingTop="12dp"
                            android:hint="@string/qty_in_stock"
                            android:inputType="number"/>
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtLayPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        app:boxBackgroundMode="none">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/custom_edittext"
                            android:paddingTop="12dp"
                            android:hint="@string/price"
                            android:inputType="number"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tax_preference"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/rgTypeTax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rdTypeTaxable"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/taxable"
                            android:textSize="15sp"
                            />
                        <RadioButton
                            android:id="@+id/rdTypeNonTaxable"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/non_taxable"
                            android:textSize="15sp"
                            />


                    </RadioGroup>

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/cancel_btn"
                        android:textSize="18sp"
                        android:backgroundTint="@color/red"
                        android:layout_marginTop="30dp"
                        app:cornerRadius="20dp"/>

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/save_btn"
                        android:textSize="18sp"
                        android:backgroundTint="@color/teal_700"
                        app:cornerRadius="20dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>


</FrameLayout>