<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Fragments.SearchStockFragment"
    >

<!-- TODO: Update blank fragment layout -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/my_shape">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp"             >
                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_search"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/purple"
                    android:layout_marginLeft="100dp"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtLayItemCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundMode="none">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtItemCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_edittext"
                        android:paddingTop="12dp"
                        android:hint="@string/item_code_txt"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Item Name Row -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/cancel_btn"
                        android:textSize="14sp"
                        android:backgroundTint="@color/red"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="70dp"
                        app:cornerRadius="20dp"/>

                    <Button
                        android:id="@+id/btnSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/search"
                        android:textSize="14sp"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/teal_700"
                        android:layout_marginStart="20dp"
                        app:cornerRadius="20dp"/>

                </LinearLayout>

            </LinearLayout>


    </LinearLayout>
</ScrollView>


</FrameLayout>